--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,9 @@
-
-/* Your CSS Code here. */
-/*My CSS*/
-blockquote{
+/* My CSS */
+blockquote {
     max-width: 600px;
     margin: 10px;
     padding: 15px;
     border-left: 8px solid green;
-    background-color: #f8fffe"";
+    background-color: #f8fffe;
     font-weight: bold;
-
 }
